adjusting container elements in menu to fix spacing

--- a/f1-app/src/App.css
+++ b/f1-app/src/App.css
@@ -10,6 +10,7 @@
   height: 200vh;
   font-family: "Zen Dots";
   font-size: 18px;
+  overflow: auto;
 }
 
 .App {
@@ -125,13 +126,11 @@
   padding-top: 2%;
 }
 
-/* .main.button.clicking {
-  width: 88%;
-  transition: all 0.15s ease;
-} */
-
 .main.button.expanded .submenu-content {
   display: block;
+  padding-bottom: none;
+  margin-bottom: none;
+  overflow: visible;
 }
 
 .main.button:hover {
@@ -151,7 +150,7 @@
 }
 
 .button-content {
-  overflow: hidden;
+  /* overflow: hidden; */
   transition: height 0.3s ease;
   height: 500%;
 }
@@ -172,15 +171,6 @@ h1 {
   font-style: italic;
 }
 
-.submenu-content {
-  /* Style the content inside the card */
-  display: none; /* Initially hidden */
-}
-
-.submenu-content.active {
-  display: block; /* Show when the card is active */
-  animation: grow 0.3s;
-}
 
 .back-image {
   width: 15%;
@@ -208,12 +198,6 @@ h1 {
   padding-top: 2%;
   padding-bottom: 3%;
   padding-left: 0%;
-}
-
-#submenu-column {
-  width: 100%;
-  margin-bottom: none;
-  padding-bottom: none;
 }
 
 .input-field {
@@ -253,34 +237,28 @@ h1 {
 }
 
 .internal-button {
-  margin-bottom: 25px;
+  margin-bottom: none;
   width: 50%;
   background-color: white;
   border-radius: 35px;
   border: none;
   height: 60px;
+  transition: all 0.3s ease;
 }
 
 .internal-button:hover {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.5), 0 5px 10px 0 rgba(0, 0, 0, 0.19);
+  /* transition-duration: 0.5s; */
 }
 
 .internal-button:active {
-  height: 58px;
-  width: 48%;
+  /* height: 59px; */
+  width: 49%;
+  background-color:lightgray;
   transition-duration: 0.15s;
 }
 .internal-button::after {
   height: 60px;
   width: 50%;
   transition-duration: 0.25s;
-}
-
-@keyframes grow {
-  from {
-    transform: scale(0);
-  }
-  to {
-    transform: scale(1);
-  }
 }
